feat: add CompanySupervisor controller, loan approval/rejection services, and company client creation logic with validation.